feat: menu 로직 추가
1. menu에 따라 page 변경 로직 추가: loadPage, menuClick 이벤트 핸들러 추가

--- a/index.html
+++ b/index.html
@@ -10,47 +10,11 @@
   </head>
 
   <body>
-    <button id="product-manage-menu">상품 관리</button>
-    <button id="vending-machine-manage-menu">잔돈충전</button>
-    <button id="product-purchase-menu">상품 구매</button>
-    <div id="app">
-      <h3>상품 추가하기</h3>
-      <form id="product-form" class="product-container">
-        <input
-          type="text"
-          required
-          id="product-name-input"
-          placeholder="상품명"
-        />
-        <input
-          type="number"
-          required
-          id="product-price-input"
-          placeholder="가격"
-        />
-        <input
-          type="number"
-          required
-          id="product-quantity-input"
-          placeholder="수량"
-        />
-        <button type="submit" id="product-add-button">추가하기</button>
-      </form>
-      <table class="product-inventory">
-        <colgroup>
-          <col style="width: 140px" />
-          <col style="width: 100px" />
-          <col style="width: 100px" />
-        </colgroup>
-        <thead>
-          <tr>
-            <th>상품명</th>
-            <th>가격</th>
-            <th>수량</th>
-          </tr>
-        </thead>
-        <tbody id="product-inventory-container"></tbody>
-      </table>
+    <div id="menu">
+      <button id="product-management" class="menu-item">상품 관리</button>
+      <button id="coin-management" class="menu-item">잔돈충전</button>
+      <button id="product-purchase" class="menu-item">상품 구매</button>
     </div>
+    <div id="app"></div>
   </body>
 </html>
